# iroha-android

./: .gitignore  README.md  bintray.gradle  build.gradle  circle.yml  genesis.block  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_splash.xml
app/src/main/res/layout/: activity_main.xml  activity_signup.xml  dialog_enter_bio.xml  fragment_history.xml  fragment_receive.xml  (+2 more)
ed25519/: .gitignore  build.gradle
ed25519/src/main/: AndroidManifest.xml
ed25519/src/main/cpp/: CMakeLists.txt  add_scalar.c  base64.c  base64.h  ed25519.h  ge.c  key_exchange.c  keypair.c  seed.c  sha3.c  sign.c  verify.c  wrapper.cpp  wrapper.h
gradle/wrapper/: gradle-wrapper.properties
iroha-android/: CMakeLists.txt  build.gradle  circle.yml
iroha-android-bindings/: bintray.gradle  build.gradle
iroha-android-bindings/src/main/: AndroidManifest.xml
iroha-android-sample/: build.gradle
iroha-android-sample/src/main/: AndroidManifest.xml
iroha-android-sample/src/main/proto/: empty.proto
iroha-android/libs/base64/: base64.hpp
iroha-android/libs/ed25519/: CMakeLists.txt  Makefile
iroha-android/libs/ed25519/src/: sha3.c
iroha-android/src/main/: AndroidManifest.xml
iroha-android/src/main/cpp/: native-lib.cpp
lib/: build.gradle
lib/libs/base64/: CMakeLists.txt  base64.cpp
lib/libs/ed25519/src/: add_scalar.c  fe.c
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: native-lib.cpp
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
(+641 files in other folders)
